--- a/demo.html
+++ b/demo.html
@@ -1,141 +1,108 @@
 <!DOCTYPE>
 
 <html>
-
 	<head>
 		<title>cytoscape-canvas.js demo</title>
-
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-
-		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
-
 		<script src="https://unpkg.com/cytoscape-canvas/dist/cytoscape-canvas.js"></script>
-
 		<!-- for testing with local version-->
 		<!-- <script src="src/cytoscape-canvas.js"></script> -->
-
 		<style>
-			body {
-				font-family: helvetica;
-				font-size: 14px;
-			}
-
 			#cy {
 				width: 100%;
 				height: 100%;
 				position: absolute;
 				left: 0;
 				top: 0;
-				z-index: 999;
-			}
-
-			h1 {
-				opacity: 0.5;
-				font-size: 1em;
 			}
 		</style>
-
 		<script>
-			$(function(){
-				var background = new Image();
-				background.onload = function() {
-					var cy = window.cy = cytoscape({
-						container: document.getElementById('cy'),
-
-						ready: function(){
-						},
-
-						style: [
-							{
-								selector: 'node',
-								css: {
-									'content': 'data(name)'
-								}
+			const background = new Image();
+			background.onload = () => {
+				const cy = cytoscape({
+					container: document.getElementById("cy"),
+					style: [
+						{
+							selector: "node",
+							css: {
+								label: "data(name)",
 							},
-
-							{
-								selector: 'edge',
-								css: {
-									'target-arrow-shape': 'triangle'
-								}
-							}
-						],
-
-						elements: {
-							nodes: [
-								{ data: { id: 'j', name: 'Jerry' } },
-								{ data: { id: 'e', name: 'Elaine' } },
-								{ data: { id: 'k', name: 'Kramer' } },
-								{ data: { id: 'g', name: 'George' } }
-							],
-							edges: [
-								{ data: { source: 'j', target: 'e' } },
-								{ data: { source: 'j', target: 'k' } },
-								{ data: { source: 'j', target: 'g' } },
-								{ data: { source: 'e', target: 'j' } },
-								{ data: { source: 'e', target: 'k' } },
-								{ data: { source: 'k', target: 'j' } },
-								{ data: { source: 'k', target: 'e' } },
-								{ data: { source: 'k', target: 'g' } },
-								{ data: { source: 'g', target: 'j' } }
-							]
 						},
+						{
+							selector: "edge",
+							css: {
+								"curve-style": "bezier",
+								"target-arrow-shape": "triangle",
+							},
+						},
+					],
+					elements: {
+						nodes: [
+							{ data: { id: "j", name: "Jerry" }, position: { x: 150, y: 50 } },
+							{ data: { id: "e", name: "Elaine" }, position: { x: 600, y: 50 } },
+							{ data: { id: "k", name: "Kramer" }, position: { x: 150, y: 400 } },
+							{ data: { id: "g", name: "George" }, position: { x: 600, y: 400 } },
+						],
+						edges: [
+							{ data: { source: "j", target: "e" } },
+							{ data: { source: "j", target: "k" } },
+							{ data: { source: "e", target: "j" } },
+							{ data: { source: "k", target: "g" } },
+						],
+					},
+					layout: {
+						name: "preset",
+					},
+				});
+
+				const bottomLayer = cy.cyCanvas({
+					zIndex: -1,
+				});
+				const canvas = bottomLayer.canvas;
+				const ctx = canvas.getContext("2d");
+
+				cy.on("render cyCanvas.resize", (evt) => {
+					bottomLayer.resetTransform(ctx);
+					bottomLayer.clear(ctx);
+					bottomLayer.setTransform(ctx);
+
+					ctx.save();
+					// Draw a background
+					ctx.drawImage(background, 0, 0);
+
+					// Draw text that follows the model
+					ctx.font = "24px Helvetica";
+					ctx.fillStyle = "black";
+					ctx.fillText("This text follows the model", 200, 300);
+
+					// Draw shadows under nodes
+					ctx.shadowColor = "black";
+					ctx.shadowBlur = 25 * cy.zoom();
+					ctx.fillStyle = "white";
+					cy.nodes().forEach((node) => {
+						const pos = node.position();
+						ctx.beginPath();
+						ctx.arc(pos.x, pos.y, 10, 0, 2 * Math.PI, false);
+						ctx.fill();
 					});
+					ctx.restore();
 
-					var canvas = cy.cyCanvas({
-						zIndex: -1,
-					});
+					// Draw text that is fixed in the canvas
+					bottomLayer.resetTransform(ctx);
+					ctx.save();
+					ctx.font = "24px Helvetica";
+					ctx.fillStyle = "red";
+					ctx.fillText("This text is fixed", 200, 200);
+					ctx.restore();
+				});
+			};
 
-					cy.on("render cyCanvas.resize", (evt) => {
-						var ctx = canvas.ctx;
-
-						canvas.resetTransform();
-						canvas.clear();
-						canvas.setTransform();
-
-						ctx.save();
-						// Draw a background
-						ctx.drawImage(background, 0, 0)
-
-						// Draw text that follows the model
-						ctx.font="24px Helvetica";
-						ctx.fillStyle = "black";
-						ctx.fillText("This text follows the model", 200, 300);
-
-						// Draw shadows under nodes
-						ctx.shadowColor = "black";
-						ctx.shadowBlur = 25 * cy.zoom();
-						ctx.fillStyle = "white";
-						cy.nodes().forEach(function(node){
-							var pos = node.position();
-							ctx.beginPath();
-							ctx.arc(pos.x,pos.y, 10, 0, 2 * Math.PI, false);
-							ctx.fill();
-						});
-						ctx.restore();
-
-						// Draw text that is fixed in the canvas
-						canvas.resetTransform();
-						ctx.save();
-						ctx.font="24px Helvetica";
-						ctx.fillStyle = "red";
-						ctx.fillText("This text is fixed", 200, 200);
-						ctx.restore();
-					});
-
-				};
-				// Preload images
-				background.src = "http://files.classcraft.com/classcraft-assets/images/event_scroll_middle.jpg";
-			});
+			// Preload images
+			background.src = "https://files.classcraft.com/classcraft-assets/images/event_scroll_middle.jpg";
 		</script>
 	</head>
-
 	<body>
-		<h1>cytoscape-canvas demo</h1>
-
-		<div id="cy"></div>
-
+		<div id="cy" />
 	</body>
-
 </html>
